# transformers_server

./: pyproject.toml
src/tserve/: main.py
src/tserve.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
