[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tserve" 
version = "1.0"
# requires-python = ">= 3.10"
dependencies = [
  'fastapi',
  'transformers',
  'uvicorn',
  'torch'
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]